force-app/main/default/objects/MatrixInfo__c/MatrixInfo__c.object-meta.xml
<CustomObject>
    <label>MatrixInfo</label>
    <nameField>
        <label>MatrixInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrixinfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>