force-app/main/default/objects/MatrixInfo__c/fields/Additional_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Info__c</fullName>
    <label>Additional Account Info</label>
    <referenceTo>Additional_Account_Info__c</referenceTo>
    <relationshipLabel>Matrixinfo</relationshipLabel>
    <relationshipName>Matrixinfo_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>