force-app/main/default/objects/MatrixInfo__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <label>Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential</valueSetName>
    </valueSet>
</CustomField>