force-app/main/default/objects/MatrixInfo__c/fields/Essentials__c.field-meta.xml
<CustomField>
    <fullName>Essentials__c</fullName>
    <label>Essentials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential</valueSetName>
    </valueSet>
</CustomField>